tests/baselines/reference/continueNotInIterationStatement3.errors.txt
==== tests/cases/compiler/continueNotInIterationStatement3.ts (1 errors) ====
    switch (0) {
      default:
        continue;
        ~~~~~~~~~
!!! continueNotInIterationStatement3.ts(3,5): error TS1104: 'continue' statement can only be used within an enclosing iteration statement.
    }